# yahboom_ws_peter

./: .gitignore  README.md
src/cat_detector/: package.xml  setup.cfg  setup.py
src/cat_detector/cat_detector/: detector_node.py
src/cat_detector/config/: cat_detector_params.yaml
src/cat_detector/launch/: cat_detector.launch.py
src/cat_detector/models/: cat_id_classifier.json
src/cat_detector/scripts/: collect_dataset.py  export_classifier_onnx.py  export_tensorrt.py  publish_test_image.py  train_classifier.py
src/cat_detector_cpp/: CMakeLists.txt  package.xml
src/cat_detector_cpp/config/: cat_detector_cpp_params.yaml
src/cat_detector_cpp/launch/: cat_detector_cpp.launch.py
src/cat_detector_cpp/src/: detector_node.cpp
src/patrol_manager/: CMakeLists.txt  package.xml
src/patrol_manager/config/: patrol_manager_params.yaml
src/patrol_manager/include/patrol_manager/: patrol_strategy.hpp  waypoint_patrol_strategy.hpp
src/patrol_manager/launch/: patrol_manager.launch.py
src/patrol_manager/src/: patrol_manager_node.cpp  waypoint_patrol_strategy.cpp
src/yahboomcar_base_node/src/: base_node_X3.cpp
src/yahboomcar_bringup/: setup.py
src/yahboomcar_bringup/launch/: slam_mapping_X3_launch.py  yahboomcar_bringup_X3_launch.py
src/yahboomcar_bringup/param/: fastdds_mapping.xml  mapper_params_online_async.yaml
src/yahboomcar_bringup/yahboomcar_bringup/: Mcnamu_driver_X3.py  scan_front_filter.py
src/yahboomcar_ctrl/yahboomcar_ctrl/: yahboom_joy_X3.py
src/yahboomcar_description/yahboomcar_description/urdf/: yahboomcar_X3.urdf  yahboomcar_X3.urdf.xacro
src/yahboomcar_nav/maps/: yahboomcar.pgm  yahboomcar.yaml
src/yahboomcar_rviz/rviz/: mapping.rviz
