<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cat_detector_cpp</name>
  <version>0.0.0</version>
  <description>C++ port of cat_detector's Phase 5a pipeline: YOLOv8 ONNX inference via cv::dnn (CUDA), Detection2DArray publish, beep + persistent timestamped capture with retention on every cat sighting.</description>
  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
